force-app/main/default/objects/Package__c/fields/Hotel_Payment__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel Payment</label>
    <referenceTo>HotelPayment__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>