force-app/main/default/objects/Package__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select Destination before selecting Place field.</inlineHelpText>
    <label>Place</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Place__c.Destination__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Destination__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>