force-app/main/default/objects/Package__c/fields/User_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>User_Phone_Number__c</fullName>
    <label>User Phone Number</label>
    <type>Phone</type>
</CustomField>