force-app/main/default/objects/Package__c/validationRules/CheckIn_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIn_greater_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>Check_In__c   &lt;   NOW()</errorConditionFormula>
    <errorMessage>Check IN date should be today or in the future</errorMessage>
</ValidationRule>