force-app/main/default/objects/Package__c/validationRules/CheckInOut.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInOut</fullName>
    <active>true</active>
    <errorConditionFormula>Check_In__c  &gt;   Check_Out__c</errorConditionFormula>
    <errorMessage>Check Out date cannot be before of Check In.</errorMessage>
</ValidationRule>