force-app/main/default/objects/Package__c/validationRules/DestinationNecessary2Place.validationRule-meta.xml
<ValidationRule>
    <fullName>DestinationNecessary2Place</fullName>
    <active>true</active>
    <errorConditionFormula>Destination__r.Id  !=  Place__r.Destination__r.Id</errorConditionFormula>
    <errorMessage>Place not in Destination.</errorMessage>
</ValidationRule>