force-app/main/default/objects/Package__c/validationRules/RoomsAvailability.validationRule-meta.xml
<ValidationRule>
    <fullName>RoomsAvailability</fullName>
    <active>true</active>
    <errorConditionFormula>Rooms_and_Services__r.Room_Availability__c  =  False</errorConditionFormula>
    <errorMessage>Room not available</errorMessage>
</ValidationRule>